applications/v4/backend/src/main/java/com/example/weeklyplanning/web/rest/errors/UnauthorizedException.java
package com.example.weeklyplanning.web.rest.errors;

import org.springframework.http.HttpStatus;

public class UnauthorizedException extends BusinessException {

    public UnauthorizedException(String message) {
        super(HttpStatus.UNAUTHORIZED, "UNAUTHORIZED", message);
    }
}
